<resources>
    <string name="app_name">Cool Cutz</string>
    <string name="Gallery">Gallery</string>
    <string name="topic">CooL CutZ</string>
    <string name="login">Sing In</string>
    <string name="reg">Register</string>
    <string name="number">Phone Number</string>
    <string name="emil">Email Address</string>
    <string name="name">User Name</string>
    <string name="regbtt">Register</string>
    <string name="rr">Register</string>
</resources>