<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="161dp"
        android:layout_height="189dp"
        app:srcCompat="@drawable/reg"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="95dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="polite"
        android:fontFamily="sans-serif-black"
        android:text="@string/reg"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#0C0C0C"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="35dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sing in"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="35dp" />

    <EditText
        android:id="@+id/editTextPhone2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/number"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="293dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="357dp" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="413dp"
        tools:text="Password" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="471dp"
        tools:text="@string/emil" />

    <Button
        android:id="@+id/button4"
        android:layout_width="190dp"
        android:layout_height="47dp"
        android:background="#BEA0C3"
        android:text="@string/regbtt"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="535dp" />
</androidx.constraintlayout.widget.ConstraintLayout>